[package]
name = "image-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
arrow-array = "31.0.0"
clap = { version = "4.1.3", features = ["derive"] }
image = "0.24.5"
indicatif = "0.17.3"
parquet = "31.0.0"
tiff = "0.8.1"
zip = {version = "0.6.3", default-features = false, features = ["deflate"]}
